# all-server-in-one

./: bot.py  bot_session.session  chmod +x start.sh  main.py  pyproject.toml  render.yaml  requirements.txt  tg_user.session
