[tool.poetry]
name = "telegram-bot-social-media-downloader-enhanced"
version = "2.0.0"
description = "Enhanced All-in-One Social Media Video Downloader Telegram Bot with Quality Selection - Developed by @Alcboss112"
authors = ["@Alcboss112 <dev@alcboss112.com>"]

# Project metadata for deployment

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

# Core async libraries
aiofiles = "24.1.0"
aiohttp = "3.12.15"
httpx = {extras = ["socks"], version = "^0.28.1"}
nest-asyncio = "1.6.0"

# Telegram bot framework
python-telegram-bot = "^21.9"

# Video downloaders and processors
yt-dlp = "2025.8.27"
instaloader = "4.14.2"
instagrapi = "2.2.1"
moviepy = "1.0.3"
m3u8 = "6.0.0"

# Web scraping and automation
playwright = "1.55.0"
cloudscraper = "1.2.71"
beautifulsoup4 = "4.13.5"

# Utilities and tools
tqdm = "4.67.1"
tenacity = "9.1.2"
loguru = "0.7.3"
python-dotenv = "1.1.1"

# Web framework
flask = "3.1.2"
requests = "2.32.4"
gunicorn = "23.0.0"
werkzeug = "3.1.2"
validators = "^0.35.0"
tldextract = "^5.3.0"
rfc3987 = "^1.3.8"
telegram = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
